ticket/k8s/nats.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nats-deploy
spec:
  replicas: 1
  selector:
    matchLabels:
      app: nats-streaming
  template:
    metadata:
      labels:
        app: nats-streaming
    spec:
      containers:
        - name: nats-streaming
          image: nats-streaming:0.17.0
          args: [
            "-p", "4222", 
            "-m", "8222",
            "-hbi", "5s",
            "-hbt", "5s",
            "-hbf", "2",
            "-SD", "-cid", "ticket-nats",
          ]
---
apiVersion: v1
kind: Service
metadata:
  name: nats-srv
spec:
  type: NodePort
  selector:
    app: nats-streaming
  ports:
    - name: nats-client-port
      protocol: TCP
      port: 4222
      targetPort: 4222
    - name: nats-monitor-port
      protocol: TCP
      port: 8222
      targetPort: 8222
