ticket/k8s/order.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: order-deploy
spec:
  replicas: 1
  selector:
    matchLabels:
      app: order
  template:
    metadata:
      labels:
        app: order
    spec:
      containers:
        - name: order
          image: rmc3408/microservice-ticket-order
---
apiVersion: v1
kind: Service
metadata:
  name: order-srv
spec:
  type: LoadBalancer
  selector:
    app: order
  ports:
    - name: order
      protocol: TCP
      port: 4002
      targetPort: 4002
