ticket/k8s/ticket.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ticket-deploy
spec:
  replicas: 1
  selector:
    matchLabels:
      app: ticket
  template:
    metadata:
      labels:
        app: ticket
    spec:
      containers:
        - name: ticket
          image: rmc3408/microservice-ticket-ticket
---
apiVersion: v1
kind: Service
metadata:
  name: ticket-srv
spec:
  type: LoadBalancer
  selector:
    app: ticket
  ports:
    - name: ticket
      protocol: TCP
      port: 4001
      targetPort: 4001
